///////////////////////////////////////////////////////////////////////////////
// VERSION HISTORY:
///////////////////////////////////////////////////////////////////////////////

 - 00001111:
    - Course section 16: Collision Detection
        - Added subroutines to check for collision between a point (on the 
          missile) and a bounding box (on the airplane)
        (Completed section)

 - 00001110:
     - Course section 15: Generating Random Numbers
        - Added subroutine for 16-bit Galois linear feedback shift register
          for generating random numbers.
        - Implemented the random number generator to spawn the airplanes
          and the submarines at a random Y position (within a certain range).
        (Completed section)

 - 00001101:
     - Course section 14: Adding Game Objects
        - Added code so that the missile actor is deleted (set to NULL)
          when exiting the screen.
        - Added code for deleting sprites for NULL actors.
        - Added spawning, updating postion and rendering of submarines.
          Submarines spawn every 3 seconds.
        - Added airplanes that are similar to submarines and spawn every
          3 seconds.
        (Completed section)

 - 00001100:
     - Course section 14: Adding Game Objects
        - Added subroutine RenderActors to loop through and render
          all the game objects (actors).
        - Added subroutine DrawSprite to send the sprite information for
          the actors to OAM-RAM.
        - Added subroutine UpdateActors to update position or state of actors
        - Added missiles that can be shot by pressing A
        - Limited A button press, so the player has to release the button
          and press again to shoot another missile.

 - 00001011:
     - Course section 14: Adding Game Objects
        - Added a new struct: Actor, that stores type, position and velocity
          for a game object. And added accompanying ActorType enum. And added